--- a/ArogyaProject/WebContent/contactus.html
+++ b/ArogyaProject/WebContent/contactus.html
@@ -44,16 +44,8 @@
     <p class="navbar-text" background-color="red">WELCOME TO AROGYA</p>
     <ul class="nav navbar-nav">
       <li class="active"><a href="Home.jsp">Home</a></li>
-      <li class="dropdown">
-        <a class="dropdown-toggle" data-toggle="dropdown" href="#">AROGYA PRODUCTS
-        <span class="caret"></span></a>
-        <ul class="dropdown-menu">
-          <li><a href="#">MEDICINES</a></li>
-          <li><a href="#">BABY PRODUCTS</a></li>
-          <li><a href="#">AYURVEDIC PRODUCTS</a></li>
-        </ul>
-      </li>
-      <li><a href="#">ABOUT US</a></li>
+    
+      
       <li><a href="contactus.html">CONTACT US</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
@@ -64,7 +56,7 @@
   </div>
 </nav>
 <div class="container">
-<img src="C:\Users\SrinivasaReddy.k\Pictures\img\contact.jpg"style='width:110%;height:110%' alt='[]' class="responsive";>
+<img src="images/contact-img.jpg"style='width:110%;height:110%' alt='[]' class="responsive";>
 <div class="text-block"> 
     <h4>AROGYA PHARMACY</h4>
     <p>Branch Office:CHENNAI</p>
